# sigil

./: .gitignore  CLAUDE.md  pyproject.toml
eval/: run_eval.py
eval/fixtures/bad_tone/: agent.py  expected.json  sigil.yaml
eval/fixtures/clean/: agent.py  expected.json  sigil.yaml
eval/fixtures/empty_project/: expected.json  helpers.py  sigil.yaml
eval/fixtures/missing_constraints/: agent.py  expected.json  sigil.yaml
eval/fixtures/routing_issues/: agent.py  expected.json  sigil.yaml
eval/fixtures/single_artifact/: agent.py  expected.json  sigil.yaml
eval/fixtures/skill_issues/: agent.py  expected.json  sigil.yaml
eval/fixtures/skill_issues/skills/agent_skills/web-search/: SKILL.md
eval/fixtures/vocab_morphological/: agent.py  expected.json  sigil.yaml
eval/fixtures/vocab_violations/: agent.py  expected.json  sigil.yaml
src/sigil/: cli.py  tui.py  watcher.py
src/sigil/agents/: analyzers.py  proposer.py  spec_drafter.py
src/sigil/core/: checks.py  discovery.py  inventory.py  model.py  models.py  spec.py
